--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
+{#navbar#}
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/">Rokto</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,5 +32,9 @@
     </ul>
   </div>
 </nav>
+{% block content %}
+
+{% endblock %}
+
 </body>
 </html>
