--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Find Active Donar</a>
+        <a class="nav-link" href="/find_donar">Find Active Donar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Become A Donar</a>
+        <a class="nav-link" href="/new_donar">Become A Donar</a>
       </li>
     </ul>
   </div>
