--- a/templates/Rokto_App/new_donar.html
+++ b/templates/Rokto_App/new_donar.html
@@ -1,5 +1,45 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<div class="container mt-4">
+    <h2 class="nd-header">Become a Donar</h2>
+    <form>
+      <div class="row">
+        <div class="col-6 mt-4">
+          <input type="text" class="form-control" name="fname" placeholder="First name" required="required">
+        </div>
+        <div class="col-6 mt-4">
+          <input type="text" class="form-control" name="lname" placeholder="Last name" required="required">
+        </div>
+        <div class="col-6 mt-4">
+          <input type="email" class="form-control" name="email" placeholder="User Email" required="required">
+        </div>
+        <div class="col-6 mt-4">
+          <input type="password" class="form-control" name="password" placeholder="User Password" required="required">
+        </div>
+        <div class="col-12 mt-4">
+          <input type="text" class="form-control" name="address" placeholder="Address" required="required">
+        </div>
+        <div class="col-6 mt-4">
+            <input type="text" class="form-control" name="dob" placeholder="Date of Birth" onfocus="(this.type='date')" required="required">
+        </div>
+        <div class="form-group col-6 mt-4">
+            <select class="form-control" id="exampleFormControlSelect1" required="required">
+              <option value="" selected disabled hidden>Select Blood Group</option>
+              <option>A+</option>
+              <option>A-</option>
+              <option>B+</option>
+              <option>B-</option>
+              <option>O+</option>
+              <option>O-</option>
+              <option>AB+</option>
+              <option>AB-</option>
+            </select>
+        </div>
+        <div class="form-group col-6 mt-4">
+          <input type="submit" class="btn btn-primary" name="submit" >
+        </div>
+      </div>
+    </form>
+</div>
 {% endblock %}
